# blog.hamaluik.ca

./: .gitattributes  .gitignore  Cargo.toml  Makefile.toml  Pipfile  README.md  config.yml  optimizejpgs.bat  optimizepngs.bat  upload.sh
assets/: avatar  browserconfig.xml  manifest.json  site.css  site.webmanifest  style.css
docs/: feed.rss  index.html  katex.css  manifest.json  site.webmanifest  style.css  style.css.map
models/: Author.yml  Post.yml
posts/: 2011-11-27-solving-systems-of-partial-differential-equations.md  2011-12-03-solving-equations-using-the-newton-raphson-method.md  2012-04-02-auto-detecting-certain-methods-in-java.md  2012-07-28-super-mario-world-physics.md  2013-10-26-making-a-custom-teensy3-hid-joystick.md  2013-11-17-simple-bezier-curves-in-matlab.md  2013-11-22-writing-an-editor-extension-to-customize-mesh-colours-in-unity.md  2014-06-01-better-beamer-themes.md  2014-10-04-simple-aabb-collision-using-minkowski-difference.md  2014-10-05-swept-aabb-collision-using-minkowski-difference.md  2014-10-06-autotilegen-rearranger.md  2014-10-07-a-platform-agnostic-thread-pool-for-haxe-openfl.md  2015-01-13-a-unity-4.6-ui-shader-to-ignore-depth-testing.md  2015-03-30-creating-a-code-profiler-in-haxe-using-macros.md  2015-11-04-quaternions-as-four-dimensional-complex-numbers.md  2016-09-17-dynamic-blender-properties.md  2016-10-12-getting-started-with-haxe-macros.md  2017-03-14-vr-ux-case-study-tilt-brush.md  2017-04-23-building-a-collision-engine-part-1-2d-gjk-collision-detection.md  2020-01-05-build-your-own-static-site-generator.md  numpad.md  (+23 more)
(+139 files in other folders)
