[package]
name = "blogham"
version = "1.0.0"
authors = ["Kenton Hamaluik <kenton@rehabtronics.com>"]
edition = "2018"
publish = false

[dependencies]
comrak = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
ignore = "0.4"
lazy_static = "1.4"
tera = "1.0"
rayon = "1.3"
html-minifier = "1.1"
regex = "1.3"
rss = "1.9"
