[package]
name = "blogham"
version = "1.0.0"
authors = ["Kenton Hamaluik <kenton@rehabtronics.com>"]
edition = "2018"
publish = false

[dependencies]
comrak = "0.13.2"
serde = { version = "1.0.138", features = ["derive"] }
serde_yaml = "0.8.24"
chrono = { version = "0.4.19", features = ["serde"] }
ignore = "0.4.18"
lazy_static = "1.4.0"
tera = "1.16.0"
rayon = "1.5.3"
html-minifier = "3.0.15"
regex = "1.6.0"
rss = "2.0.1"
